added functions to display pages when visitied with node

--- a/css.html
+++ b/css.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Favorite CSS Frameworks</title>
-</head>
-<body>
-<h1>My favorite CSS Frameworks!</h1>
-</body>
+
+  <head>
+    <title>Favorite CSS Frameworks</title>
+  </head>
+
+  <body>
+    <h1>My favorite CSS Frameworks!</h1>
+    <a href="favorite_food">Favorite Food</a>
+  </body>
+
 </html>
