--- a/favorite_movies.html
+++ b/favorite_movies.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Favorite Movies</title>
-</head>
-<body>
-<h1>My favorite movies are....</h1>
 
-</body>
+  <head>
+    <title>Favorite Movies</title>
+  </head>
+
+  <body>
+    <h1>My favorite movies are....</h1>
+    <a href="home">Home Page</a>
+  </body>
+
 </html>
