--- a/home.html
+++ b/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Home Page</title>
-</head>
-<body>
-<h1>Welcome to the super awesome homepage! Yay!</h1>
-<p>Stuff goes here</p>
-</body>
+
+  <head>
+    <title>Home Page</title>
+  </head>
+
+  <body>
+    <h1>Welcome to the super awesome homepage! Yay!</h1>
+    <p>Stuff goes here</p>
+    <a href="css">CSS Frameworks</a>
+  </body>
+
 </html>
